@@ -72,7 +72,8 @@ public:
                          int numPoints);
   bool addCompoundBSpline(int &tag, const std::vector<int> &curveTags,
                           int numPoints);
-  bool addLineLoop(int &tag, const std::vector<int> &curveTags);
+  bool addLineLoop(int &tag, const std::vector<int> &curveTags,
+                   bool reorient = false);
   bool addPlaneSurface(int &tag, const std::vector<int> &wireTags);
   bool addDiscreteSurface(int &tag);
   bool addSurfaceFilling(int &tag, const std::vector<int> &wireTags,
