@@ -2427,14 +2427,16 @@ namespace gmsh { // Top-level functions
       // `curveTags' should contain (signed) tags of model enties of dimension 1
       // forming a closed loop: a negative tag signifies that the underlying curve
       // is considered with reversed orientation. If `tag' is positive, set the tag
-      // explicitly; otherwise a new tag is selected automatically. Return the tag
-      // of the curve loop.
+      // explicitly; otherwise a new tag is selected automatically. If `reorient'
+      // is set, automatically reorient the curves if necessary. Return the tag of
+      // the curve loop.
       inline int addCurveLoop(const std::vector<int> & curveTags,
-                              const int tag = -1)
+                              const int tag = -1,
+                              const bool reorient = false)
       {
         int ierr = 0;
         int *api_curveTags_; size_t api_curveTags_n_; vector2ptr(curveTags, &api_curveTags_, &api_curveTags_n_);
-        int result_api_ = gmshModelGeoAddCurveLoop(api_curveTags_, api_curveTags_n_, tag, &ierr);
+        int result_api_ = gmshModelGeoAddCurveLoop(api_curveTags_, api_curveTags_n_, tag, (int)reorient, &ierr);
         if(ierr) throwLastError();
         gmshFree(api_curveTags_);
         return result_api_;
