@@ -3526,16 +3526,17 @@ class model:
             return api_result_
 
         @staticmethod
-        def addCurveLoop(curveTags, tag=-1):
+        def addCurveLoop(curveTags, tag=-1, reorient=False):
             """
-            gmsh.model.geo.addCurveLoop(curveTags, tag=-1)
+            gmsh.model.geo.addCurveLoop(curveTags, tag=-1, reorient=False)
 
             Add a curve loop (a closed wire) formed by the curves `curveTags'.
             `curveTags' should contain (signed) tags of model enties of dimension 1
             forming a closed loop: a negative tag signifies that the underlying curve
             is considered with reversed orientation. If `tag' is positive, set the tag
-            explicitly; otherwise a new tag is selected automatically. Return the tag
-            of the curve loop.
+            explicitly; otherwise a new tag is selected automatically. If `reorient' is
+            set, automatically reorient the curves if necessary. Return the tag of the
+            curve loop.
 
             Return an integer value.
             """
@@ -3544,6 +3545,7 @@ class model:
             api_result_ = lib.gmshModelGeoAddCurveLoop(
                 api_curveTags_, api_curveTags_n_,
                 c_int(tag),
+                c_int(bool(reorient)),
                 byref(ierr))
             if ierr.value != 0:
                 raise Exception(logger.getLastError())
