@@ -2505,12 +2505,13 @@ Add a curve loop (a closed wire) formed by the curves @code{curveTags}.
 @code{curveTags} should contain (signed) tags of model enties of dimension 1
 forming a closed loop: a negative tag signifies that the underlying curve is
 considered with reversed orientation. If @code{tag} is positive, set the tag
-explicitly; otherwise a new tag is selected automatically. Return the tag of the
-curve loop.
+explicitly; otherwise a new tag is selected automatically. If @code{reorient} is
+set, automatically reorient the curves if necessary. Return the tag of the curve
+loop.
 
 @table @asis
 @item Input:
-@code{curveTags}, @code{tag = -1}
+@code{curveTags}, @code{tag = -1}, @code{reorient = False}
 @item Output:
 -
 @item Return:
